@@ -17,6 +17,14 @@ Version 0.4.0 - ??
         Example: "tour.customers[MyCustomerDecorator].decoratorGetter"
 - [bugfix] WFSubmit.duplicateSubmitMessage now successfully prevents duplicate submission of AJAX forms.
 - [bugfix] WFSearchField detection of return key was not reliable and caused unexpected errors and/or submits in some browsers. Has been fixed now to better detect return key.
+- [improved] Vastly improved the PhocoaControllerTestCase_PHPUnit to allow testing of redirect exceptions, form submissions, $_REQUEST data, responseTemplate used, or page output.
+             Refactored to a fluent interface as well.
+             Examples:
+                  setInvocationPath($invocationPath)
+                  setModuleData($moduleData)
+                  setRequestData($data)
+                  setFormData($formId, $formData, $formSubmitButton = NULL)
+                  setExpectRedirectException($url, $class = 'WFRedirectRequestException')
 
 Version 0.3.9 - 10/21/2010
 - [new] Add WFRequestController->isMobileBrowser()
